apps/rocketchat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: rocketchat
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  selector:
    app: rocketchat
  ports:
    - name: http
      port: 3000
      targetPort: 3000
